Updated shade of red on match details page to stop eyebleed

--- a/public/css/tracker.css
+++ b/public/css/tracker.css
@@ -9,7 +9,7 @@
 	margin-left: 120px;
 }
 .worldColors .red {
-	color: #f7464a;
+	color: #f56265;
 }
 .worldColors .blue {
 	color: #6295d9;
